test/fails/nomain.imp
fun  notmain(n)
vars tmp;
{       
        return  tmp;
}
